[package]
name = "dtn"
version = "0.1.0"
authors = ["Matt Bradbury <matt@bexars.com>"]
edition = "2018"
default-run = "dtrouter"

#  See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies] 
serde_cbor = "0.11.1"
serde_derive = "1.0.105"
serde = "1.0.105"
crc = "1.8.1"
clap = { git = "https://github.com/clap-rs/clap/" }
tokio = { version = "0.2.16", features = ["full"] }
futures = "0.3"
bp7 = "0.6.1"
test-case = "1.0.0"
# fondant = "0.1.1"
# fondant = { path = "../../fondant/fondant" }
fondant = { git = "https://github.com/bexars/fondant.git" }
shrust = "0.0.7"
# tokio-threadpool = "0.1.18"
strum = "0.18.0"
strum_macros = "0.18.0"
log = "0.4.8"
env_logger = "0.7.1"
msg_bus = { git = "https://github.com/bexars/msg_bus.git" }
linefeed = "0.6.0"
# linefeed = { git = "https://github.com/bexars/linefeed.git" }
rand = "0.7.3"
futures-util = "0.3.4"
# socket2 = "0.3.12"
# stdio-override = "0.1.3"
nix = "0.17.0" 
async-trait = "0.1.30"
arc-swap = "0.4.5"
lazy_static = "1.4.0"
readonly = "0.1.5"

[[bin]]
name = "dtcat"
path = "src/bin/dtcat.rs"

[[bin]]
name = "dtrouter"
path = "src/bin/dtrouter.rs"
